--- a/server/package.json
+++ b/server/package.json
@@ -11,8 +11,9 @@
     "start:dev": "tsnd --respawn ./src/index.ts",
     "test": "echo \"Error: no test specified\" && exit 1",
     "lint": "eslint \"src/*.ts\"",
-    "lint:fix": "eslint \"src/*.ts\" --fix",
-    "format": "prettier --write \"src/*.ts\""
+    "lint:fix": "eslint \"src/**/*.ts\" --fix",
+    "format": "prettier --write \"src/**/*.ts\"",
+    "swagger": "swagger-jsdoc -d swagger-def.json -o swagger.yaml src/routers/*"
   },
   "repository": {
     "type": "git",
@@ -25,14 +26,20 @@
   },
   "homepage": "https://github.com/kaleido-io/firefly-samples-gallery#readme",
   "dependencies": {
-    "express": "^4.17.3"
+    "@photic/firefly-sdk-nodejs": "^0.0.3",
+    "express": "^4.17.3",
+    "swagger-ui-express": "^4.3.0",
+    "yamljs": "^0.3.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
+    "@types/swagger-ui-express": "^4.1.3",
+    "@types/yamljs": "^0.2.31",
     "@typescript-eslint/eslint-plugin": "^5.17.0",
     "eslint": "^8.12.0",
     "eslint-plugin-import": "^2.25.4",
     "prettier": "^2.6.1",
+    "swagger-jsdoc": "^6.1.0",
     "ts-node-dev": "^1.1.8",
     "typescript": "^4.6.3"
   }
