--- a/server/package.json
+++ b/server/package.json
@@ -2,18 +2,18 @@
   "name": "firefly-samples-gallery-server",
   "version": "1.0.0",
   "description": "",
-  "main": "dist/index.js",
+  "main": "dist/src/index.js",
   "scripts": {
     "build": "tsc",
     "prepublish": "npm run build",
     "prestart": "npm run build",
     "start": "node .",
     "start:dev": "tsnd --respawn ./src/index.ts",
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "lint": "eslint \"src/*.ts\"",
-    "lint:fix": "eslint \"src/**/*.ts\" --fix",
-    "format": "prettier --write \"src/**/*.ts\"",
-    "swagger": "swagger-jsdoc -d swagger-def.json -o swagger.yaml src/routers/*"
+    "test": "jest",
+    "lint": "eslint \"src/*.ts\" \"test/**/*.ts\"",
+    "lint:fix": "eslint \"src/**/*.ts\" \"test/**/*.ts\" --fix",
+    "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
+    "swagger": "swagger-jsdoc -d swagger-def.json -o swagger.json src/routers/*"
   },
   "repository": {
     "type": "git",
@@ -26,20 +26,24 @@
   },
   "homepage": "https://github.com/kaleido-io/firefly-samples-gallery#readme",
   "dependencies": {
-    "@photic/firefly-sdk-nodejs": "^0.0.3",
+    "@photic/firefly-sdk-nodejs": "^0.0.4",
     "express": "^4.17.3",
-    "swagger-ui-express": "^4.3.0",
-    "yamljs": "^0.3.0"
+    "swagger-ui-express": "^4.3.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
+    "@types/jest": "^27.4.1",
+    "@types/supertest": "^2.0.12",
     "@types/swagger-ui-express": "^4.1.3",
-    "@types/yamljs": "^0.2.31",
     "@typescript-eslint/eslint-plugin": "^5.17.0",
     "eslint": "^8.12.0",
     "eslint-plugin-import": "^2.25.4",
+    "jest": "^27.5.1",
     "prettier": "^2.6.1",
+    "supertest": "^6.2.2",
     "swagger-jsdoc": "^6.1.0",
+    "ts-jest": "^27.1.4",
+    "ts-node": "^10.7.0",
     "ts-node-dev": "^1.1.8",
     "typescript": "^4.6.3"
   }
