--- a/server/package.json
+++ b/server/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "dist/src/index.js",
   "scripts": {
+    "prebuild": "rimraf dist",
     "build": "tsc",
     "prepare": "npm run build",
     "prestart": "npm run build",
@@ -26,20 +27,24 @@
   },
   "homepage": "https://github.com/kaleido-io/firefly-samples-gallery#readme",
   "dependencies": {
-    "@photic/firefly-sdk-nodejs": "^0.0.9",
+    "@photic/firefly-sdk-nodejs": "file:../../firefly-sdk-nodejs",
+    "body-parser": "^1.20.0",
     "express": "^4.17.3",
-    "swagger-ui-express": "^4.3.0"
+    "swagger-ui-express": "^4.3.0",
+    "ws": "^8.5.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
     "@types/jest": "^27.4.1",
     "@types/supertest": "^2.0.12",
     "@types/swagger-ui-express": "^4.1.3",
+    "@types/ws": "^8.5.3",
     "@typescript-eslint/eslint-plugin": "^5.17.0",
     "eslint": "^8.12.0",
     "eslint-plugin-import": "^2.25.4",
     "jest": "^27.5.1",
     "prettier": "^2.6.1",
+    "rimraf": "^3.0.2",
     "supertest": "^6.2.2",
     "swagger-jsdoc": "^6.1.0",
     "ts-jest": "^27.1.4",
