--- a/server/package.json
+++ b/server/package.json
@@ -27,9 +27,10 @@
   },
   "homepage": "https://github.com/kaleido-io/firefly-samples-gallery#readme",
   "dependencies": {
-    "@photic/firefly-sdk-nodejs": "file:../../firefly-sdk-nodejs",
+    "@photic/firefly-sdk-nodejs": "^0.0.10",
     "body-parser": "^1.20.0",
     "express": "^4.17.3",
+    "nanoid": "^3.3.2",
     "swagger-ui-express": "^4.3.0",
     "ws": "^8.5.0"
   },
