--- a/server/package.json
+++ b/server/package.json
@@ -29,12 +29,14 @@
   "dependencies": {
     "@photic/firefly-sdk-nodejs": "^0.0.10",
     "body-parser": "^1.20.0",
+    "cors": "^2.8.5",
     "express": "^4.17.3",
     "nanoid": "^3.3.2",
     "swagger-ui-express": "^4.3.0",
     "ws": "^8.5.0"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
     "@types/jest": "^27.4.1",
     "@types/supertest": "^2.0.12",
