--- a/ui/package.json
+++ b/ui/package.json
@@ -25,7 +25,8 @@
     "react-split-pane": "^0.1.92",
     "react-syntax-highlighter": "^15.5.0",
     "reconnecting-websocket": "^4.4.0",
-    "typescript": "^4.6.3"
+    "typescript": "^4.6.3",
+    "underscore": "^1.13.2"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -55,6 +56,7 @@
   },
   "devDependencies": {
     "@types/react-syntax-highlighter": "^13.5.2",
+    "@types/underscore": "^1.11.4",
     "@typescript-eslint/eslint-plugin": "^5.17.0",
     "@typescript-eslint/parser": "^5.17.0",
     "eslint-config-prettier": "^8.5.0",
