--- a/server/.eslintrc.json
+++ b/server/.eslintrc.json
@@ -6,7 +6,8 @@
   },
   "plugins": [
     "@typescript-eslint/eslint-plugin",
-    "eslint-plugin-import"
+    "eslint-plugin-import",
+    "jest"
   ],
   "extends": [
     "eslint:recommended",
@@ -29,7 +30,7 @@
     "@typescript-eslint/no-explicit-any": "off",
     "@typescript-eslint/no-floating-promises": "error",
     "@typescript-eslint/require-await": "error",
-    "@typescript-eslint/unbound-method": "error",
+    "jest/unbound-method": "error",
     "@typescript-eslint/no-unsafe-call": "warn",
     "@typescript-eslint/no-unsafe-return": "warn",
     "@typescript-eslint/ban-types": "warn",
