--- a/server/package.json
+++ b/server/package.json
@@ -10,7 +10,7 @@
     "prestart": "npm run build",
     "start": "node .",
     "start:dev": "tsnd --respawn ./src/index.ts",
-    "test": "jest",
+    "test": "jest --verbose --silent",
     "lint": "eslint \"src/*.ts\" \"test/**/*.ts\"",
     "lint:fix": "eslint \"src/**/*.ts\" \"test/**/*.ts\" --fix",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
@@ -27,7 +27,7 @@
   },
   "homepage": "https://github.com/kaleido-io/firefly-samples-gallery#readme",
   "dependencies": {
-    "@photic/firefly-sdk-nodejs": "^0.0.10",
+    "@photic/firefly-sdk-nodejs": "^0.0.11",
     "body-parser": "^1.20.0",
     "cors": "^2.8.5",
     "class-transformer": "^0.3.1",
@@ -56,6 +56,7 @@
     "@typescript-eslint/eslint-plugin": "^5.17.0",
     "eslint": "^8.12.0",
     "eslint-plugin-import": "^2.25.4",
+    "eslint-plugin-jest": "^26.1.3",
     "jest": "^27.5.1",
     "prettier": "^2.6.1",
     "rimraf": "^3.0.2",
