[events] events in right panel
Signed-off-by: David Echelberger <eberger727@gmail.com>

--- a/server/package.json
+++ b/server/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "firefly-samples-gallery-server",
+  "name": "firefly-sandbox-server",
   "version": "1.0.0",
   "description": "",
   "main": "dist/src/index.js",
