--- a/ui/package.json
+++ b/ui/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "firefly-samples-gallery-ui",
+  "name": "firefly-sandbox-ui",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -14,8 +14,10 @@
     "@types/node": "^16.11.26",
     "@types/react": "^17.0.43",
     "@types/react-dom": "^17.0.14",
+    "dayjs": "^1.11.0",
     "i18next": "^21.6.14",
     "react": "^17.0.2",
+    "react-copy-to-clipboard": "^5.0.4",
     "react-dom": "^17.0.2",
     "react-i18next": "^11.16.2",
     "react-query": "^3.34.19",
@@ -55,6 +57,7 @@
     ]
   },
   "devDependencies": {
+    "@types/react-copy-to-clipboard": "^5.0.2",
     "@types/react-syntax-highlighter": "^13.5.2",
     "@types/underscore": "^1.11.4",
     "@typescript-eslint/eslint-plugin": "^5.17.0",
