--- a/server/package.json
+++ b/server/package.json
@@ -27,7 +27,7 @@
   },
   "homepage": "https://github.com/kaleido-io/firefly-samples-gallery#readme",
   "dependencies": {
-    "@photic/firefly-sdk-nodejs": "^0.0.18",
+    "@hyperledger/firefly-sdk": "^0.1.0-alpha.1",
     "body-parser": "^1.20.0",
     "class-transformer": "^0.3.1",
     "class-validator": "^0.12.2",
@@ -54,6 +54,7 @@
     "@types/underscore": "^1.11.4",
     "@types/ws": "^8.5.3",
     "@typescript-eslint/eslint-plugin": "^5.17.0",
+    "@typescript-eslint/parser": "^5.19.0",
     "eslint": "^8.12.0",
     "eslint-plugin-import": "^2.25.4",
     "eslint-plugin-jest": "^26.1.3",
