updated package versions to alpha + badges to show ui and server versions
Signed-off-by: Marina Kashgarian <marina.kashgarian@kaleido.io>

--- a/server/package.json
+++ b/server/package.json
@@ -1,6 +1,6 @@
 {
   "name": "firefly-sandbox-server",
-  "version": "1.0.0",
+  "version": "0.1.0-alpha.1",
   "description": "",
   "main": "dist/src/index.js",
   "scripts": {
