--- a/ui/package.json
+++ b/ui/package.json
@@ -1,6 +1,6 @@
 {
   "name": "firefly-sandbox-ui",
-  "version": "0.1.0",
+  "version": "0.1.0-alpha.1",
   "private": true,
   "dependencies": {
     "@emotion/react": "^11.8.2",
