--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -1,4 +1,4 @@
 # SPDX-License-Identifier: Apache-2.0
 
-# firefly-ui maintainers
+# firefly-sandbox maintainers
 * @shorsher @peterbroadhurst @awrichar @eberger727
