--- a/ui/package.json
+++ b/ui/package.json
@@ -15,6 +15,7 @@
     "@types/react": "^17.0.43",
     "@types/react-dom": "^17.0.14",
     "dayjs": "^1.11.0",
+    "ethereumjs-util": "^7.1.4",
     "i18next": "^21.6.14",
     "react": "^17.0.2",
     "react-copy-to-clipboard": "^5.0.4",
@@ -25,7 +26,6 @@
     "react-router": "^6.2.2",
     "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
-    "react-split-pane": "^0.1.92",
     "react-syntax-highlighter": "^15.5.0",
     "reconnecting-websocket": "^4.4.0",
     "typescript": "^4.6.3",
