--- a/ui/package.json
+++ b/ui/package.json
@@ -17,6 +17,7 @@
     "dayjs": "^1.11.0",
     "ethereumjs-util": "^7.1.4",
     "i18next": "^21.6.14",
+    "jotai": "^1.12.1",
     "react": "^17.0.2",
     "react-copy-to-clipboard": "^5.0.4",
     "react-dom": "^17.0.2",
