--- a/server/package.json
+++ b/server/package.json
@@ -1,6 +1,6 @@
 {
   "name": "firefly-sandbox-server",
-  "version": "0.1.0-alpha.1",
+  "version": "1.1.2",
   "description": "",
   "main": "dist/src/index.js",
   "scripts": {
