--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -1,4 +1,3 @@
 # SPDX-License-Identifier: Apache-2.0
 
-# firefly-sandbox maintainers
-* @shorsher @peterbroadhurst @awrichar @eberger727
+- @hyperledger/firefly-sandbox-maintainers
