Update dependencies. Repalce create-react-app with Vite
Signed-off-by: Nicko Guyer <nicko.guyer@kaleido.io>

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,6 +9,13 @@
       "request": "launch",
       "type": "node",
       "outputCapture": "std"
+    },
+    {
+      "name": "Launch Chrome",
+      "request": "launch",
+      "type": "chrome",
+      "url": "http://localhost:3000",
+      "webRoot": "${workspaceFolder}/ui"
     }
   ]
 }
